fix spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,8 +14,8 @@
       }
 
       .feature {
-        margin: 0px;
-        width: 100vw;
+        margin: 4px;
+        width: 90vw;
       }
 
 }
